content/_generated-doc/3.6/config/quarkus-init-init-runtime-config.adoc

:summaryTableId: quarkus-init-init-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-init-init-runtime-config_configuration]]link:#quarkus-init-init-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-init-init-runtime-config_quarkus.init-and-exit]]`link:#quarkus-init-init-runtime-config_quarkus.init-and-exit[quarkus.init-and-exit]`


[.description]
--
true to quit exit right after the initialization. The option is not meant be used directly by users.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INIT_AND_EXIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INIT_AND_EXIT+++`
endif::add-copy-button-to-env-var[]
--|@io.smallrye.config.WithConverter(io.quarkus.runtime.init.InitRuntimeConfig.BooleanConverter.class) boolean 
|`false`

|===